temp fix: wrap code examples tabs in narrow browser windows

--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -30,3 +30,17 @@ html[data-theme="dark"] .docusaurus-highlight-code-line {
 .opencollective-image {
   color-scheme: initial;
 }
+
+/*
+TODO: remove these two styles when
+we can upgrade to docusaurus-theme-openapi@0.6.5
+*/
+
+div.api-code-tab-group {
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+div.api-code-tab-group button.api-code-tab  {
+  width: unset;
+}
